fixes so that it compiles

--- a/Point_set_processing_3/examples/Point_set_processing_3/CMakeLists.txt
+++ b/Point_set_processing_3/examples/Point_set_processing_3/CMakeLists.txt
@@ -49,8 +49,7 @@ foreach(
   edge_aware_upsample_point_set_example
   structuring_example
   read_ply_points_with_colors_example
-  write_ply_points_example
-  lfs_example)
+  write_ply_points_example)
   create_single_source_cgal_program("${target}.cpp")
   target_link_libraries(${target} PRIVATE ${CGAL_libs})
 endforeach()
@@ -73,6 +72,7 @@ if(TARGET CGAL::Eigen3_support)
   # Executables that require Eigen
   foreach(
     target
+    lfs_example
     jet_smoothing_example
     normal_estimation
     clustering_example
