--- a/Triangulation_3/test/Triangulation_3/CMakeLists.txt
+++ b/Triangulation_3/test/Triangulation_3/CMakeLists.txt
@@ -138,6 +138,7 @@ CGAL_add_cdt3_from_local_off_test(HexiCosPot-1-sv)
 CGAL_add_cdt3_from_local_off_test(HexiCosPot-1-sv-reduced)
 CGAL_add_cdt3_from_local_off_test(mpi-part)
 CGAL_add_cdt3_from_local_off_test(thingi-1036467-selection3)
+CGAL_add_cdt3_from_local_off_test(243014-min2)
 
 include(./Thingi10k-CDT.cmake)
 
