WIP generic polygon tracing (to be debugged...)

--- a/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
+++ b/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
@@ -89,6 +89,8 @@ if(TARGET CGAL::Eigen3_support)
   target_link_libraries(straightest_geodesic_sm_example PUBLIC CGAL::Eigen3_support)
   create_single_source_cgal_program("trace_polygon_example.cpp")
   target_link_libraries(trace_polygon_example PUBLIC CGAL::Eigen3_support)
+  create_single_source_cgal_program("trace_regular_polygons_example.cpp")
+  target_link_libraries(trace_regular_polygons_example PUBLIC CGAL::Eigen3_support)
   create_single_source_cgal_program("geodesic_isolevel_refinement.cpp")
   target_link_libraries(geodesic_isolevel_refinement PUBLIC CGAL::Eigen3_support)
   create_single_source_cgal_program("interpolated_corrected_curvatures_SM.cpp")
