--- a/Polyhedron/demo/Polyhedron/Plugins/PMP/CMakeLists.txt
+++ b/Polyhedron/demo/Polyhedron/Plugins/PMP/CMakeLists.txt
@@ -131,13 +131,12 @@ target_link_libraries(
   PUBLIC scene_surface_mesh_item scene_polylines_item
          scene_points_with_normal_item)
 
-qt6_wrap_ui( repairUI_FILES RemoveNeedlesDialog.ui SelfSnapDialog.ui)
+qt6_wrap_ui( repairUI_FILES RemoveNeedlesDialog.ui SelfSnapDialog.ui AddBboxDialog.ui)
 polyhedron_demo_plugin(repair_polyhedron_plugin Repair_polyhedron_plugin  ${repairUI_FILES} KEYWORDS PMP)
 target_link_libraries(repair_polyhedron_plugin PUBLIC scene_points_with_normal_item scene_surface_mesh_item scene_polygon_soup_item)
 if(TARGET CGAL::TBB_support)
   target_link_libraries(repair_polyhedron_plugin PUBLIC CGAL::TBB_support)
 endif()
-
 
 if(TARGET CGAL::Eigen3_support)
   qt6_wrap_ui(isotropicRemeshingUI_FILES Isotropic_remeshing_dialog.ui)
