add new test cases (from previous fixed bugs)

--- a/Triangulation_3/test/Triangulation_3/CMakeLists.txt
+++ b/Triangulation_3/test/Triangulation_3/CMakeLists.txt
@@ -133,6 +133,7 @@ CGAL_add_cdt3_from_local_off_test(cheese36)
 CGAL_add_cdt3_from_local_off_test(cheese6-PLCerrorWithFace0)
 CGAL_add_cdt3_from_local_off_test(HexiCosPot-11)
 CGAL_add_cdt3_from_local_off_test(HexiCosPot-1)
+CGAL_add_cdt3_from_local_off_test(HexiCosPot-1-min1)
 CGAL_add_cdt3_from_local_off_test(HexiCosPot-10a)
 CGAL_add_cdt3_from_local_off_test(HexiCosPot-1-reduced)
 CGAL_add_cdt3_from_local_off_test(HexiCosPot-1-sv)
@@ -140,6 +141,7 @@ CGAL_add_cdt3_from_local_off_test(HexiCosPot-1-sv-reduced)
 CGAL_add_cdt3_from_local_off_test(mpi-part)
 CGAL_add_cdt3_from_local_off_test(thingi-1036467-selection3)
 CGAL_add_cdt3_from_local_off_test(243014-min2)
+CGAL_add_cdt3_from_local_off_test(243014-min3)
 CGAL_add_cdt3_from_local_off_test(1435440-min1)
 
 include(./Thingi10k-CDT.cmake)
