--- a/Triangulation_3/test/Triangulation_3/CMakeLists.txt
+++ b/Triangulation_3/test/Triangulation_3/CMakeLists.txt
@@ -145,6 +145,8 @@ CGAL_add_cdt3_from_local_off_test(243014-min3)
 CGAL_add_cdt3_from_local_off_test(1435440-min1)
 CGAL_add_cdt3_from_local_off_test(1435440-min2)
 CGAL_add_cdt3_from_local_off_test(106884-min1)
+CGAL_add_cdt3_from_local_off_test(113344-min3)
+CGAL_add_cdt3_from_local_off_test(40985-min3)
 
 include(./Thingi10k-CDT.cmake)
 
