--- a/.github/workflows/reuse.yml
+++ b/.github/workflows/reuse.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         args: spdx
     - name: install dependencies
-      run: sudo apt-get install -y cmake
+      run: sudo apt-get update && sudo apt-get install -y cmake
     - name: Create CGAL internal release
       run: |
         mkdir -p ./release
