--- a/Ball_merge_surface_reconstruction/examples/Ball_merge_surface_reconstruction/CMakeLists.txt
+++ b/Ball_merge_surface_reconstruction/examples/Ball_merge_surface_reconstruction/CMakeLists.txt
@@ -1,15 +1,18 @@
+# Created by the script cgal_create_cmake_script
+# This is the CMake script for compiling a CGAL application.
+
 cmake_minimum_required(VERSION 3.1...3.23)
-project(Ball_merge)
+project(Advancing_front_surface_reconstruction_Examples)
 
 find_package(CGAL REQUIRED)
 
-include_directories( ./include )
-create_single_source_cgal_program("ball_merge_reconstruction.cpp")
+include_directories( ../../include)
 
-find_package(TBB QUIET)
-include(CGAL_TBB_support)
-if(TARGET CGAL::TBB_support)
-target_link_libraries(ball_merge_reconstruction PUBLIC CGAL::TBB_support)
-else()
-  message(STATUS "NOTICE: Intel TBB was not found. Parallel code will not be used.")
-endif()
+# create a target per cppfile
+file(
+  GLOB cppfiles
+  RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
+  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
+foreach(cppfile ${cppfiles})
+  create_single_source_cgal_program("${cppfile}")
+endforeach()
