--- a/Arrangement_on_surface_2/demo/Arrangement_on_surface_2_earth/CMakeLists.txt
+++ b/Arrangement_on_surface_2/demo/Arrangement_on_surface_2_earth/CMakeLists.txt
@@ -121,8 +121,8 @@ target_link_libraries(earth PRIVATE
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shaders
   DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
-install(TARGETS earth
-  RUNTIME DESTINATION "${INSTALL_EXAMPLEDIR}"
-  BUNDLE DESTINATION "${INSTALL_EXAMPLEDIR}"
-  LIBRARY DESTINATION "${INSTALL_EXAMPLEDIR}"
-)
+# install(TARGETS earth
+#   RUNTIME DESTINATION "${INSTALL_EXAMPLEDIR}"
+#   BUNDLE DESTINATION "${INSTALL_EXAMPLEDIR}"
+#   LIBRARY DESTINATION "${INSTALL_EXAMPLEDIR}"
+# )
