--- a/Arrangement_on_surface_2/demo/Arrangement_on_surface_2_earth/CMakeLists.txt
+++ b/Arrangement_on_surface_2/demo/Arrangement_on_surface_2_earth/CMakeLists.txt
@@ -12,7 +12,7 @@ if(POLICY CMP0071)
   cmake_policy(SET CMP0071 NEW)
 endif()
 
-find_package(Qt6 REQUIRED COMPONENTS Core Gui OpenGL OpenGLWidgets Widgets Xml)
+find_package(Qt6 COMPONENTS Core Gui OpenGL OpenGLWidgets Widgets Xml)
 find_package(CGAL COMPONENTS Qt6)
 find_package(Boost REQUIRED COMPONENTS filesystem)
 
