reimplement does_first_triangle_intersect_second_triangle_interior
Now use a modified code of the original predicate `do_intersect(Tri_3, Tri_3)`.

--- a/.gitignore
+++ b/.gitignore
@@ -1217,8 +1217,18 @@ dump-*.xyz
 dump-*.binary.cgal
 dump_*.txt
 dump_*.off
+dump-*.polylines.txt
 all_segments.polylines.txt
-Data/data/meshes/*.1.vtk
+Data/data/meshes/*.*.vtk
+Data/data/meshes/*.*.ele
+Data/data/meshes/*.*.face
+Data/data/meshes/*.*.edge
+Data/data/meshes/*.*.node
+Data/data/meshes/*.*.mesh
+Data/data/meshes/*.*.smesh
+Data/data/meshes/*.off-cdt-output.off
+Data/data/meshes/*.log
 /*.off
 /*.xyz
 log.txt
+/r0*
