--- a/Tetrahedral_remeshing/test/Tetrahedral_remeshing/CMakeLists.txt
+++ b/Tetrahedral_remeshing/test/Tetrahedral_remeshing/CMakeLists.txt
@@ -14,6 +14,15 @@ create_single_source_cgal_program("test_tetrahedral_remeshing_of_one_subdomain.c
 create_single_source_cgal_program("test_tetrahedral_remeshing_io.cpp")
 create_single_source_cgal_program("test_tetrahedral_remeshing_from_mesh_file.cpp")
 
+# Test MLS projection
+add_executable(test_tetrahedral_remeshing_mls
+              "test_tetrahedral_remeshing.cpp")
+target_link_libraries(test_tetrahedral_remeshing_mls PUBLIC CGAL::CGAL CGAL::Data)
+target_compile_definitions(test_tetrahedral_remeshing_mls
+                           PUBLIC -DCGAL_TET_REMESHING_SMOOTHING_WITH_MLS)
+add_test(NAME test_tetrahedral_remeshing_mls COMMAND test_tetrahedral_remeshing_mls)
+
+
 # Tests using Mesh_3 require Eigen
 find_package(Eigen3 3.1.0 QUIET) #(3.1.0 or greater)
 include(CGAL_Eigen3_support)
@@ -24,6 +33,17 @@ if(TARGET CGAL::Eigen3_support)
   create_single_source_cgal_program("test_mesh_and_remesh_with_sizing_field.cpp")
   target_link_directories(test_mesh_and_remesh_with_sizing_field PUBLIC CGAL::Eigen3_support)
 
+  # with MLS projection
+  add_executable(test_mesh_and_remesh_polyhedral_domain_with_features_mls
+                "test_mesh_and_remesh_polyhedral_domain_with_features.cpp")
+  target_link_libraries(test_mesh_and_remesh_polyhedral_domain_with_features_mls
+                        PUBLIC CGAL::CGAL CGAL::Data CGAL::Eigen3_support)
+  target_compile_definitions(test_mesh_and_remesh_polyhedral_domain_with_features_mls
+                             PUBLIC -DCGAL_TET_REMESHING_SMOOTHING_WITH_MLS)
+  add_test(NAME test_mesh_and_remesh_polyhedral_domain_with_features_mls
+           COMMAND test_mesh_and_remesh_polyhedral_domain_with_features_mls)
+
+
   if(CGAL_ImageIO_USE_ZLIB)
     create_single_source_cgal_program("test_mesh_and_remesh_image.cpp")
     target_link_libraries(test_mesh_and_remesh_image PUBLIC CGAL::Eigen3_support)
@@ -33,3 +53,5 @@ if(TARGET CGAL::Eigen3_support)
 else()
   message(STATUS "NOTICE: Some tests require Eigen 3.1 (or greater), and will not be compiled.")
 endif()
+
+
