--- a/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
+++ b/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
@@ -61,6 +61,7 @@ find_package(Eigen3 3.2.0 QUIET) #(requires 3.2.0 or greater)
 include(CGAL_Eigen3_support)
 if(TARGET CGAL::Eigen3_support)
   create_single_source_cgal_program("acvd_example.cpp")
+  target_link_libraries(acvd_example PUBLIC CGAL::Eigen3_support)
   create_single_source_cgal_program("hole_filling_example.cpp")
   target_link_libraries(hole_filling_example PUBLIC CGAL::Eigen3_support)
   create_single_source_cgal_program("hole_filling_example_SM.cpp")
