--- a/Basic_viewer/examples/Basic_viewer/CMakeLists.txt
+++ b/Basic_viewer/examples/Basic_viewer/CMakeLists.txt
@@ -14,17 +14,21 @@ find_package(CGAL REQUIRED OPTIONAL_COMPONENTS Qt6)
 find_package(Eigen3 3.1.0)
 include(CGAL_Eigen3_support)
 
+create_single_source_cgal_program("draw_lcc.cpp")
 create_single_source_cgal_program("draw_mesh_and_points.cpp")
 create_single_source_cgal_program("draw_several_windows.cpp")
-create_single_source_cgal_program("draw_surface_mesh_small_faces.cpp")
 create_single_source_cgal_program("draw_surface_mesh_height.cpp")
+create_single_source_cgal_program("draw_surface_mesh_small_faces.cpp")
+create_single_source_cgal_program("draw_surface_mesh_vcolor.cpp")
 
 if(CGAL_Qt6_FOUND)
   #link it with the required CGAL libraries
+  target_link_libraries(draw_lcc PUBLIC CGAL::CGAL_Basic_viewer)
   target_link_libraries(draw_mesh_and_points PUBLIC CGAL::CGAL_Basic_viewer)
   target_link_libraries(draw_several_windows PUBLIC CGAL::CGAL_Basic_viewer)
-  target_link_libraries(draw_surface_mesh_small_faces PUBLIC CGAL::CGAL_Basic_viewer)
   target_link_libraries(draw_surface_mesh_height PUBLIC CGAL::CGAL_Basic_viewer)
+  target_link_libraries(draw_surface_mesh_small_faces PUBLIC CGAL::CGAL_Basic_viewer)
+  target_link_libraries(draw_surface_mesh_vcolor PUBLIC CGAL::CGAL_Basic_viewer)
 endif()
 
 if(TARGET CGAL::Eigen3_support)
