--- a/Tetrahedral_remeshing/examples/Tetrahedral_remeshing/CMakeLists.txt
+++ b/Tetrahedral_remeshing/examples/Tetrahedral_remeshing/CMakeLists.txt
@@ -47,6 +47,8 @@ if(TARGET CGAL::Eigen3_support)
     message(STATUS "Found TBB")
     target_link_libraries(mesh_and_remesh_polyhedral_domain_with_features PRIVATE CGAL::TBB_support)
     target_link_libraries(mesh_and_remesh_c3t3 PRIVATE CGAL::TBB_support)
+    target_link_libraries(mesh_and_remesh_with_sizing PRIVATE CGAL::TBB_support)
+    target_link_libraries(tetrahedral_remeshing_with_features_and_sizing PRIVATE CGAL::TBB_support)
   endif()
 else()
   message(STATUS "NOTICE: Some examples require Eigen 3.1 (or greater), and will not be compiled.")
