--- a/Installation/CMakeLists.txt
+++ b/Installation/CMakeLists.txt
@@ -1052,7 +1052,7 @@ You must disable CGAL_ENABLE_CHECK_HEADERS.")
     execute_process(
       COMMAND
         "${CMAKE_COMMAND}" -DCGAL_BUILD_THREE_DOC=TRUE
-        -DDOXYGEN_EXECUTABLE=${DOXYGEN_EXECUTABLE} -DBE_QUIET=TRUE -DDOXYGEN_QUIET=TRUE
+        -DDOXYGEN_EXECUTABLE=${DOXYGEN_EXECUTABLE} -DBE_QUIET=TRUE
         "${CGAL_SOURCE_DIR}/Documentation/doc"
       WORKING_DIRECTORY "${DOC_DIR}")
     execute_process(
