--- a/Polyhedron/demo/Polyhedron/Plugins/PMP/CMakeLists.txt
+++ b/Polyhedron/demo/Polyhedron/Plugins/PMP/CMakeLists.txt
@@ -27,9 +27,9 @@ polyhedron_demo_plugin(extrude_plugin Extrude_plugin KEYWORDS PMP)
 target_link_libraries(extrude_plugin PUBLIC scene_surface_mesh_item
                                             scene_selection_item)
 
-qt6_wrap_ui( acvd_simplificationUI_FILES ACVD_simplification_dialog.ui)
-polyhedron_demo_plugin(acvd_simplification_plugin ACVD_simplification_plugin ${acvd_simplificationUI_FILES} KEYWORDS PMP)
-target_link_libraries(acvd_simplification_plugin PUBLIC scene_surface_mesh_item scene_points_with_normal_item scene_polygon_soup_item CGAL::Eigen3_support)
+qt6_wrap_ui( acvd_remeshingUI_FILES ACVD_remeshing_dialog.ui)
+polyhedron_demo_plugin(acvd_remeshing_plugin ACVD_remeshing_plugin ${acvd_remeshingUI_FILES} KEYWORDS PMP)
+target_link_libraries(acvd_remeshing_plugin PUBLIC scene_surface_mesh_item scene_points_with_normal_item scene_polygon_soup_item CGAL::Eigen3_support)
 
 if(TARGET CGAL::Eigen3_support)
   if("${EIGEN3_VERSION}" VERSION_GREATER "3.1.90")
