--- a/Tetrahedral_remeshing/test/Tetrahedral_remeshing/CMakeLists.txt
+++ b/Tetrahedral_remeshing/test/Tetrahedral_remeshing/CMakeLists.txt
@@ -8,6 +8,8 @@ project(Tetrahedral_remeshing_Tests)
 # CGAL and its components
 find_package(CGAL REQUIRED COMPONENTS ImageIO)
 
+add_definitions(-DCGAL_NDEBUG)
+
 create_single_source_cgal_program("test_tetrahedral_remeshing.cpp")
 create_single_source_cgal_program("test_tetrahedral_remeshing_with_features.cpp")
 create_single_source_cgal_program("test_tetrahedral_remeshing_of_one_subdomain.cpp")
