PMP: Fix smooth_shape()

--- a/Polygon_mesh_processing/test/Polygon_mesh_processing/CMakeLists.txt
+++ b/Polygon_mesh_processing/test/Polygon_mesh_processing/CMakeLists.txt
@@ -71,6 +71,8 @@ create_single_source_cgal_program("test_isolevel_refinement.cpp")
 find_package(Eigen3 3.2.0 QUIET) #(requires 3.2.0 or greater)
 include(CGAL_Eigen3_support)
 if(TARGET CGAL::Eigen3_support)
+  create_single_source_cgal_program("issue7990.cpp")
+  target_link_libraries(issue7990 PUBLIC CGAL::Eigen3_support)
   create_single_source_cgal_program("fairing_test.cpp")
   target_link_libraries(fairing_test PUBLIC CGAL::Eigen3_support)
   create_single_source_cgal_program("triangulate_hole_Polyhedron_3_no_delaunay_test.cpp")
