activate verbose mode on tests

--- a/Tetrahedral_remeshing/test/Tetrahedral_remeshing/CMakeLists.txt
+++ b/Tetrahedral_remeshing/test/Tetrahedral_remeshing/CMakeLists.txt
@@ -9,6 +9,7 @@ project(Tetrahedral_remeshing_Tests)
 find_package(CGAL REQUIRED COMPONENTS ImageIO)
 
 add_definitions(-DCGAL_NDEBUG)
+add_definitions(-DCGAL_TETRAHEDRAL_REMESHING_VERBOSE)
 
 create_single_source_cgal_program("test_tetrahedral_remeshing.cpp")
 create_single_source_cgal_program("test_tetrahedral_remeshing_with_features.cpp")
