--- a/Solver_interface/examples/Solver_interface/CMakeLists.txt
+++ b/Solver_interface/examples/Solver_interface/CMakeLists.txt
@@ -6,6 +6,8 @@ project(Solver_interface_Examples)
 
 find_package(CGAL REQUIRED)
 
+create_single_source_cgal_program("accelerate.cpp")
+
 # Use Eigen
 find_package(Eigen3 3.1.0 QUIET) #(requires 3.1.0 or greater)
 include(CGAL_Eigen3_support)
