--- a/Lab/demo/Lab/implicit_functions/CMakeLists.txt
+++ b/Lab/demo/Lab/implicit_functions/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 cmake_minimum_required(VERSION 3.1...3.23)
 
-include(cgallab_macros)
+include(CGALlab_macros)
 
 if(NOT POLICY CMP0070 AND POLICY CMP0053)
   # Only set CMP0053 to OLD with CMake<3.10, otherwise there is a warning.
