Change from where data are read to get ready for the testsuite;  typedef -> using

--- a/Polyline_distance/test/Polyline_distance/CMakeLists.txt
+++ b/Polyline_distance/test/Polyline_distance/CMakeLists.txt
@@ -2,9 +2,8 @@
 # This is the CMake script for compiling a CGAL application.
 
 cmake_minimum_required(VERSION 3.1...3.14)
-project( Polyline_distance )
+project( Polyline_distance_Test )
 
 find_package(CGAL REQUIRED QUIET OPTIONAL_COMPONENTS Core )
 
-create_single_source_cgal_program( "dummy_test.cpp" )
-
+create_single_source_cgal_program( "Frechet_distance_test.cpp" )
