--- a/Polyline_distance/examples/Polyline_distance/CMakeLists.txt
+++ b/Polyline_distance/examples/Polyline_distance/CMakeLists.txt
@@ -6,4 +6,13 @@ project( Polyline_distance_Examples )
 
 find_package(CGAL REQUIRED QUIET OPTIONAL_COMPONENTS Core )
 
+
+find_package(Eigen3 3.1.0 QUIET) #(requires 3.1.0 or greater)
+include(CGAL_Eigen3_support)
+
 create_single_source_cgal_program( "Frechet_distance_2.cpp" )
+
+if(TARGET CGAL::Eigen3_support)
+create_single_source_cgal_program( "Frechet_distance_d.cpp" )
+target_link_libraries(Frechet_distance_d PUBLIC CGAL::Eigen3_support)
+endif()
