--- a/Mesh_3/CMakeLists.txt
+++ b/Mesh_3/CMakeLists.txt
@@ -1,9 +1,12 @@
 cmake_minimum_required(VERSION 3.1...3.23)
 project(Mesh_3)
 
-option(CGAL_${PROJECT_NAME}_BENCHMARK "Add benchmark to project" OFF)
-if(CGAL_${PROJECT_NAME}_BENCHMARK)
-  add_subdirectory("benchmark/${PROJECT_NAME}")
+
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/benchmark/${PROJECT_NAME}/CMakeLists.txt")
+  option(CGAL_${PROJECT_NAME}_BENCHMARK "Add benchmark to project" OFF)
+  if(CGAL_${PROJECT_NAME}_BENCHMARK)
+    add_subdirectory("benchmark/${PROJECT_NAME}")
+  endif()
 endif()
 
 add_subdirectory("examples/${PROJECT_NAME}")
