--- a/Barycentric_coordinates_3/examples/Barycentric_coordinates_3/CMakeLists.txt
+++ b/Barycentric_coordinates_3/examples/Barycentric_coordinates_3/CMakeLists.txt
@@ -1,24 +1,15 @@
 # Created by the script cgal_create_cmake_script.
 # This is the CMake script for compiling a CGAL application.
 
+cmake_minimum_required(VERSION 3.1...3.23)
 project(Barycentric_coordinates_3_Examples)
-set(CMAKE_CXX_FLAGS "${CMAXE_CXX_FLAGS} -Wall -Wextra -Werror")
 
-cmake_minimum_required(VERSION 3.1...3.15)
-set(CMAKE_CXX_STANDARD 14)
+find_package(CGAL REQUIRED)
 
-find_package(CGAL QUIET COMPONENTS Core)
-if(CGAL_FOUND)
+include(CGAL_CreateSingleSourceCGALProgram)
 
-  include(${CGAL_USE_FILE})
-  include(CGAL_CreateSingleSourceCGALProgram)
-
-  create_single_source_cgal_program("tetrahedron_coordinates.cpp")
-  create_single_source_cgal_program("shape_deformation.cpp")
-  create_single_source_cgal_program("wachspress_coordinates.cpp")
-  create_single_source_cgal_program("discrete_harmonic_coordinates.cpp")
-  create_single_source_cgal_program("mean_value_coordinates.cpp")
-
-else()
-  message(WARNING "This program requires the CGAL library, and will not be compiled.")
-endif()
+create_single_source_cgal_program("tetrahedron_coordinates.cpp")
+create_single_source_cgal_program("shape_deformation.cpp")
+create_single_source_cgal_program("wachspress_coordinates.cpp")
+create_single_source_cgal_program("discrete_harmonic_coordinates.cpp")
+create_single_source_cgal_program("mean_value_coordinates.cpp")
