avoid duplicated targets

--- a/Barycentric_coordinates_3/test/Barycentric_coordinates_3/CMakeLists.txt
+++ b/Barycentric_coordinates_3/test/Barycentric_coordinates_3/CMakeLists.txt
@@ -10,9 +10,9 @@ include(CGAL_CreateSingleSourceCGALProgram)
 
 create_single_source_cgal_program("test_tetrahedron_coordinates.cpp")
 create_single_source_cgal_program("test_wp_dh_mv_tetrahedron.cpp")
-create_single_source_cgal_program("test_wp_weights.cpp")
-create_single_source_cgal_program("test_dh_weights.cpp")
-create_single_source_cgal_program("test_mv_weights.cpp")
+create_single_source_cgal_program("test_wp_weights_3.cpp")
+create_single_source_cgal_program("test_dh_weights_3.cpp")
+create_single_source_cgal_program("test_mv_weights_3.cpp")
 create_single_source_cgal_program("test_edge_cases.cpp")
 create_single_source_cgal_program("test_containers.cpp")
 create_single_source_cgal_program("test_boundary_coordinates.cpp")
