--- a/Barycentric_coordinates_3/examples/Barycentric_coordinates_3/CMakeLists.txt
+++ b/Barycentric_coordinates_3/examples/Barycentric_coordinates_3/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(CGAL REQUIRED)
 include(CGAL_CreateSingleSourceCGALProgram)
 
 create_single_source_cgal_program("tetrahedron_coordinates.cpp")
-create_single_source_cgal_program("shape_deformation.cpp")
-create_single_source_cgal_program("wachspress_coordinates.cpp")
-create_single_source_cgal_program("discrete_harmonic_coordinates.cpp")
-create_single_source_cgal_program("mean_value_coordinates.cpp")
+create_single_source_cgal_program("shape_deformation_3.cpp")
+create_single_source_cgal_program("wachspress_coordinates_3.cpp")
+create_single_source_cgal_program("discrete_harmonic_coordinates_3.cpp")
+create_single_source_cgal_program("mean_value_coordinates_3.cpp")
