--- a/Installation/CMakeLists.txt
+++ b/Installation/CMakeLists.txt
@@ -482,11 +482,11 @@ endif()
 
 find_package(TBB QUIET)
 if(TBB_FOUND)
-  message(STATUS "Using TBB version ${TBB_VERSION}")
+  message(STATUS "Third-parties libraries TBB ${TBB_VERSION}")
 endif()
 find_package(Eigen3 QUIET)
 if(Eigen3_FOUND)
-  message(STATUS "Using Eigen3 version ${EIGEN3_VERSION}")
+  message(STATUS "Third-parties libraries Eigen3 ${EIGEN3_VERSION}")
 endif()
 message("== Generate version files (DONE) ==\n")
 
