--- a/TDS_3/test/TDS_3/CMakeLists.txt
+++ b/TDS_3/test/TDS_3/CMakeLists.txt
@@ -12,6 +12,6 @@ create_single_source_cgal_program("test_triangulation_tds_3.cpp")
 create_single_source_cgal_program("test_io_tds3.cpp")
 
 if(TARGET CGAL::TBB_support)
-  message(STATUS "Found TBB ${TBB_VERSION}")
+  message(STATUS "Third-parties libraries TBB ${TBB_VERSION}")
   target_link_libraries(test_triangulation_tds_3 PUBLIC CGAL::TBB_support)
 endif()
