fixing some include error

--- a/Basic_viewer/examples/Basic_viewer_glfw/CMakeLists.txt
+++ b/Basic_viewer/examples/Basic_viewer_glfw/CMakeLists.txt
@@ -12,6 +12,7 @@ include_directories (
     .
     ../../include/CGAL/GLFW/vendor/glfw/deps/
     ../../include/CGAL/GLFW/vendor/glad/include/
+    ../../include/CGAL/GLFW/vendor/glfw/include/
 )
 
 
