--- a/Frechet_distance/examples/Frechet_distance/CMakeLists.txt
+++ b/Frechet_distance/examples/Frechet_distance/CMakeLists.txt
@@ -11,6 +11,8 @@ find_package(Eigen3 3.1.0 QUIET) #(requires 3.1.0 or greater)
 include(CGAL_Eigen3_support)
 
 create_single_source_cgal_program( "Frechet_distance_2.cpp" )
+create_single_source_cgal_program( "Frechet_distance_3.cpp" )
+create_single_source_cgal_program( "Has_filtered_predicates.cpp" )
 
 if(TARGET CGAL::Eigen3_support)
 create_single_source_cgal_program( "Frechet_distance_d.cpp" )
