--- a/Basic_viewer/examples/Basic_viewer/CMakeLists.txt
+++ b/Basic_viewer/examples/Basic_viewer/CMakeLists.txt
@@ -9,8 +9,7 @@
 cmake_minimum_required(VERSION 3.1...3.23)
 project(Basic_viewer_Examples)
 
-#CGAL_Qt6 is needed for the drawing.
-find_package(CGAL REQUIRED OPTIONAL_COMPONENTS GLFW)
+find_package(CGAL REQUIRED OPTIONAL_COMPONENTS Qt6 GLFW)
 find_package(Eigen3 3.1.0)
 include(CGAL_Eigen3_support)
 
@@ -24,9 +23,7 @@ create_single_source_cgal_program("draw_surface_mesh_vcolor.cpp")
 if(CGAL_Qt6_FOUND)
   #link it with the required CGAL libraries
   target_link_libraries(draw_lcc PUBLIC CGAL::CGAL_Basic_viewer)
-  target_link_libraries(draw_mesh_and_points PUBLIC CGAL::CGAL_Basic_viewer)
   target_link_libraries(draw_several_windows PUBLIC CGAL::CGAL_Basic_viewer)
-  target_link_libraries(draw_surface_mesh_height PUBLIC CGAL::CGAL_Basic_viewer)
   target_link_libraries(draw_surface_mesh_small_faces PUBLIC CGAL::CGAL_Basic_viewer)
   target_link_libraries(draw_surface_mesh_vcolor PUBLIC CGAL::CGAL_Basic_viewer)
 else()
@@ -35,8 +32,8 @@ endif()
 
 if(CGAL_GLFW_FOUND)
   #link it with the required CGAL libraries
-  target_link_libraries(draw_surface_mesh_height PUBLIC CGAL::CGAL_Basic_viewer_GLFW)
   target_link_libraries(draw_mesh_and_points PUBLIC CGAL::CGAL_Basic_viewer_GLFW)
+  target_link_libraries(draw_surface_mesh_height PUBLIC CGAL::CGAL_Basic_viewer_GLFW)
 else()
   message("CGAL_GLFW not configured: examples that require GLFW will not be compiled.")
 endif()
