--- a/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
+++ b/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
@@ -102,6 +102,8 @@ if(TARGET CGAL::Eigen3_support)
   if (NanoSVG_FOUND)
     create_single_source_cgal_program("trace_svg_example.cpp")
     target_link_libraries(trace_svg_example PUBLIC CGAL::Eigen3_support CGAL::NanoSVG_support)
+    create_single_source_cgal_program("trace_polygon_on_svg_curve_example.cpp")
+    target_link_libraries(trace_polygon_on_svg_curve_example PUBLIC CGAL::Eigen3_support CGAL::NanoSVG_support)
   else()
     message(STATUS "NOTICE: trace_svg_example requires NanoSVG and will not be compiled.")
   endif()
