--- a/Installation/REUSE.toml
+++ b/Installation/REUSE.toml
@@ -10,7 +10,7 @@ SPDX-FileCopyrightText = "1995-2024 The CGAL Project"
 SPDX-License-Identifier = "CC0-1.0"
 
 [[annotations]]
-path = ["REUSE.toml", "include/CGAL/Qt/ImageInterface.ui", "include/CGAL/Qt/resources/qglviewer-icon.xpm", "AUTHORS", "CMakeLists.txt", "README", "auxiliary/cgal_create_cmake_script.1", "auxiliary/gmp/README", "include/CGAL/license/gpl_package_list.txt", "auxiliary/cgal_app.icns", "copyright", "VERSION"]
+path = ["REUSE.toml", "lib/cmake/CGAL/CGALConfig-installation-dirs.cmake.in", "include/CGAL/Qt/ImageInterface.ui", "include/CGAL/Qt/resources/qglviewer-icon.xpm", "AUTHORS", "CMakeLists.txt", "README", "auxiliary/cgal_create_cmake_script.1", "auxiliary/gmp/README", "include/CGAL/license/gpl_package_list.txt", "auxiliary/cgal_app.icns", "copyright", "VERSION"]
 precedence = "aggregate"
 SPDX-FileCopyrightText = "1995-2024 The CGAL Project"
 SPDX-License-Identifier = "CC0-1.0"
