--- a/Installation/CMakeLists.txt
+++ b/Installation/CMakeLists.txt
@@ -487,39 +487,39 @@ set(LIBRARIES_TO_CHECK
   NTL TBB OpenCV METIS ZLIB
   Ceres GLPK SCIP OSQP
 )
-function(check_library lib)
+function(check_library cgal_3rdparty_lib)
   set(QT_NO_CREATE_VERSIONLESS_TARGETS ON)
   set(CMAKE_FIND_PACKAGE_QUIET TRUE)
-  find_package(${lib} QUIET)
+  find_package(${cgal_3rdparty_lib} QUIET)
   set(CMAKE_FIND_PACKAGE_QUIET FALSE)
-  if(${lib}_FOUND)
+  if(${cgal_3rdparty_lib}_FOUND)
     set(version_var "")
-    if(${lib} STREQUAL "Eigen3")
+    if(${cgal_3rdparty_lib} STREQUAL "Eigen3")
       set(version_var ${EIGEN3_VERSION})
-    elseif(${lib} STREQUAL "GMP")
+    elseif(${cgal_3rdparty_lib} STREQUAL "GMP")
       set(version_var ${GMP_VERSION})
-    elseif(${lib} STREQUAL "MPFR")
+    elseif(${cgal_3rdparty_lib} STREQUAL "MPFR")
       set(version_var ${MPFR_VERSION})
-    elseif(${lib} STREQUAL "METIS")
+    elseif(${cgal_3rdparty_lib} STREQUAL "METIS")
       set(version_var ${METIS_VERSION})
-    elseif(DEFINED ${lib}_VERSION)
-      set(version_var ${${lib}_VERSION})
-    elseif(DEFINED ${lib}_VERSION_STRING)
-      set(version_var ${${lib}_VERSION_STRING})
+    elseif(DEFINED ${cgal_3rdparty_lib}_VERSION)
+      set(version_var ${${cgal_3rdparty_lib}_VERSION})
+    elseif(DEFINED ${cgal_3rdparty_lib}_VERSION_STRING)
+      set(version_var ${${cgal_3rdparty_lib}_VERSION_STRING})
     endif()
 
     if(version_var)
-      message(STATUS "Third-party library ${lib} ${version_var}")
+      message(STATUS "Third-party library ${cgal_3rdparty_lib} ${version_var}")
     else()
-      message(STATUS "Third-party library ${lib} found")
+      message(STATUS "Third-party library ${cgal_3rdparty_lib} found")
     endif()
   else()
-    message(STATUS "Third-party library ${lib} not found")
+    message(STATUS "Third-party library ${cgal_3rdparty_lib} not found")
   endif()
 endfunction()
 
-foreach(lib IN LISTS LIBRARIES_TO_CHECK)
-  check_library(${lib})
+foreach(cgal_3rdparty_lib IN LISTS LIBRARIES_TO_CHECK)
+  check_library(${cgal_3rdparty_lib})
 endforeach()
 message("== Generate version files (DONE) ==\n")
 #--------------------------------------------------------------------------------------------------
