--- a/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
+++ b/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
@@ -99,6 +99,8 @@ if(TARGET CGAL::Eigen3_support)
   target_link_libraries(trace_regular_polygons_example PUBLIC CGAL::Eigen3_support)
   create_single_source_cgal_program("geodesic_isolevel_refinement.cpp")
   target_link_libraries(geodesic_isolevel_refinement PUBLIC CGAL::Eigen3_support)
+  create_single_source_cgal_program("trace_polygon_on_polygonal_curve_example.cpp")
+  target_link_libraries(trace_polygon_on_polygonal_curve_example PUBLIC CGAL::Eigen3_support)
   if (NanoSVG_FOUND)
     create_single_source_cgal_program("trace_svg_example.cpp")
     target_link_libraries(trace_svg_example PUBLIC CGAL::Eigen3_support CGAL::NanoSVG_support)
